--- a/Front-end/app/src/main/AndroidManifest.xml
+++ b/Front-end/app/src/main/AndroidManifest.xml
@@ -34,6 +34,16 @@
         <activity android:name=".QuizActivities.QuizActivity" />
         <activity android:name=".QuizActivities.QuizFinishedActivity" />
         <activity android:name=".TestPage" />
+
+        <service
+            android:name=".MyFirebaseMessagingService"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+                <action android:name="com.google.firebase."/>
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
