--- a/Front-end/app/src/main/AndroidManifest.xml
+++ b/Front-end/app/src/main/AndroidManifest.xml
@@ -31,8 +31,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".QuizActivities.QuizActivity" />
-        <activity android:name=".QuizActivities.QuizFinishedActivity" />
+        <activity android:name=".quizActivities.QuizActivity" />
+        <activity android:name=".quizActivities.QuizFinishedActivity" />
         <activity android:name=".TestPage" />
 
         <service
