--- a/Back-end/package.json
+++ b/Back-end/package.json
@@ -1,7 +1,18 @@
 {
-  "main": "server.js",
-  "dependencies": {
-    "mongodb": "3.6.2"
+  "name": "module6expressapp",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "start": "node ./bin/www"
   },
-  "private": true
+  "dependencies": {
+    "mongodb": "3.6.2",
+    "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "jade": "~1.11.0",
+    "morgan": "~1.9.1"
+  }
 }
