--- a/Back-end/package.json
+++ b/Back-end/package.json
@@ -9,7 +9,8 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "http-errors": "~1.6.3",
+    "http": "0.0.1-security",
+    "http-errors": "^1.6.3",
     "mongodb": "^3.6.2",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11"
