--- a/Back-end/package.json
+++ b/Back-end/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
+    "test": "jest"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
