--- a/Back-end/package.json
+++ b/Back-end/package.json
@@ -15,5 +15,8 @@
     "jade": "~1.11.0",
     "mongodb": "^3.6.2",
     "morgan": "~1.9.1"
+  },
+  "devDependencies": {
+    "jest": "^26.6.2"
   }
 }
