--- a/Back-end/.travis.yml
+++ b/Back-end/.travis.yml
@@ -1,5 +1,16 @@
+sudo: false
 language: node_js
-
 node_js:
-- node
-- 'lts/*'
+- '8'
+branches:
+  only:
+  - master
+cache:
+  directories:
+  - node_modules
+before_install:
+- npm update
+install:
+- npm install
+script:
+- npm test
