--- a/Back-end/package.json
+++ b/Back-end/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "jest"
+    "test": "node exp.test.js"
   },
   "dependencies": {
     "@shelf/jest-mongodb": "^1.2.3",
