--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 *.swp
 .idea/
 node_modules/
+Back-end/plated-inn-286021-firebase-adminsdk-oxi0q-0e23826d54.json
+Front-end/app/google-services.json
