--- a/Back-end/package.json
+++ b/Back-end/package.json
@@ -15,7 +15,8 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mongodb": "^3.6.2",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "firebase-admin": "~6.2.0"
   },
   "devDependencies": {
     "jest": "^26.6.2"
