--- a/Back-end/package.json
+++ b/Back-end/package.json
@@ -11,11 +11,13 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "firebase-admin": "^9.3.0",
     "fs": "0.0.1-security",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mongodb": "^3.6.2",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "nodemailer": "^6.4.15"
   },
   "devDependencies": {
     "jest": "^26.6.2"
