--- a/Back-end/package.json
+++ b/Back-end/package.json
@@ -17,6 +17,7 @@
     "jade": "~1.11.0",
     "mongodb": "^3.6.2",
     "morgan": "~1.9.1",
+    "node-schedule": "^1.3.2",
     "nodemailer": "^6.4.15"
   },
   "devDependencies": {
