--- a/Back-end/package.json
+++ b/Back-end/package.json
@@ -21,6 +21,7 @@
     "nodemailer": "^6.4.15"
   },
   "devDependencies": {
-    "jest": "^26.6.2"
+    "jest": "^26.6.2",
+    "supertest": "^6.0.1"
   }
 }
