--- a/Back-end/package.json
+++ b/Back-end/package.json
@@ -16,6 +16,7 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mongodb": "^3.6.2",
+    "mongoose": "^5.10.15",
     "morgan": "~1.9.1",
     "node-schedule": "^1.3.2",
     "nodemailer": "^6.4.15"
