--- a/.travis.yml
+++ b/.travis.yml
@@ -17,13 +17,13 @@ before_install:
 install:
 - npm install
 - npm install supertest --save-dev
-- apt install gnupg -y
-- wget -qO - https://www.mongodb.org/static/pgp/server-4.4.asc | apt-key add -
-- echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu bionic/mongodb-org/4.4 multiverse" | tee /etc/apt/sources.list.d/mongodb-org-4.4.list
-- apt update
-- apt install -y mongodb-org
-- systemctl daemon-reload
-- systemctl start mongod
+- sudo apt install gnupg -y
+- wget -qO - https://www.mongodb.org/static/pgp/server-4.4.asc | sudo apt-key add -
+- echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu bionic/mongodb-org/4.4 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-4.4.list
+- sudo apt update
+- sudo apt install -y mongodb-org
+- sudo systemctl daemon-reload
+- sudo systemctl start mongod
 script:
 - npm test
 - jest --coverage
