--- a/.travis.yml
+++ b/.travis.yml
@@ -26,4 +26,4 @@ install:
 - sudo systemctl start mongod
 script:
 - npm test
-- jest --watch --runInBand --detectOpenHandles
+- jest --watch --runInBand --detectOpenHandles --coverage
